logs/dag_id=etl_dag/run_id=manual__2023-10-26T040046.234573+0000/task_id=create_air_pollution_table/attempt=1.log
[2023-10-26T04:00:52.199+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_dag.create_air_pollution_table manual__2023-10-26T04:00:46.234573+00:00 [queued]>
[2023-10-26T04:00:52.249+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_dag.create_air_pollution_table manual__2023-10-26T04:00:46.234573+00:00 [queued]>
[2023-10-26T04:00:52.250+0000] {taskinstance.py:1359} INFO - Starting attempt 1 of 3
[2023-10-26T04:00:52.290+0000] {taskinstance.py:1380} INFO - Executing <Task(PostgresOperator): create_air_pollution_table> on 2023-10-26 04:00:46.234573+00:00
[2023-10-26T04:00:52.308+0000] {standard_task_runner.py:57} INFO - Started process 525 to run task
[2023-10-26T04:00:52.315+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'etl_dag', 'create_air_pollution_table', 'manual__2023-10-26T04:00:46.234573+00:00', '--job-id', '162', '--raw', '--subdir', 'DAGS_FOLDER/tugaskel8_dag.py', '--cfg-path', '/tmp/tmp6zg96qrc']
[2023-10-26T04:00:52.327+0000] {standard_task_runner.py:85} INFO - Job 162: Subtask create_air_pollution_table
[2023-10-26T04:00:52.724+0000] {task_command.py:415} INFO - Running <TaskInstance: etl_dag.create_air_pollution_table manual__2023-10-26T04:00:46.234573+00:00 [running]> on host d73c1ff20372
[2023-10-26T04:01:00.599+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='kel8' AIRFLOW_CTX_DAG_ID='etl_dag' AIRFLOW_CTX_TASK_ID='create_air_pollution_table' AIRFLOW_CTX_EXECUTION_DATE='2023-10-26T04:00:46.234573+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-10-26T04:00:46.234573+00:00'
[2023-10-26T04:01:00.606+0000] {sql.py:274} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS public.hands_on_final (
            id INTEGER NOT NULL,
            city VARCHAR(100) NOT NULL,
            name VARCHAR(100) NOT NULL,
            entity VARCHAR(100) NULL,
            country VARCHAR(100) NOT NULL,
            sources VARCHAR(100) NULL,
            isMobile BOOLEAN NOT NULL,
            isAnalysis BOOLEAN NOT NULL,
            parameters jsonb NOT NULL,
            sensorType VARCHAR(100) NULL,
            coordinates jsonb NOT NULL,
            firstUpdated VARCHAR(100) NOT NULL,
            lastUpdated VARCHAR(100) NOT NULL,
            measurements INTEGER NOT NULL,
            bounds jsonb NOT NULL,
            manufacturers jsonb NOT NULL, 
        );
    
[2023-10-26T04:01:00.626+0000] {base.py:73} INFO - Using connection ID 'db_polusiudara' for task execution.
[2023-10-26T04:01:00.643+0000] {base.py:73} INFO - Using connection ID 'db_polusiudara' for task execution.
[2023-10-26T04:01:04.970+0000] {sql.py:418} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS public.hands_on_final (
            id INTEGER NOT NULL,
            city VARCHAR(100) NOT NULL,
            name VARCHAR(100) NOT NULL,
            entity VARCHAR(100) NULL,
            country VARCHAR(100) NOT NULL,
            sources VARCHAR(100) NULL,
            isMobile BOOLEAN NOT NULL,
            isAnalysis BOOLEAN NOT NULL,
            parameters jsonb NOT NULL,
            sensorType VARCHAR(100) NULL,
            coordinates jsonb NOT NULL,
            firstUpdated VARCHAR(100) NOT NULL,
            lastUpdated VARCHAR(100) NOT NULL,
            measurements INTEGER NOT NULL,
            bounds jsonb NOT NULL,
            manufacturers jsonb NOT NULL, 
        );
    , parameters: None
[2023-10-26T04:01:05.027+0000] {taskinstance.py:1935} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 19:         );
                 ^

[2023-10-26T04:01:05.047+0000] {taskinstance.py:1398} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_dag, task_id=create_air_pollution_table, execution_date=20231026T040046, start_date=20231026T040052, end_date=20231026T040105
[2023-10-26T04:01:05.069+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 162 for task create_air_pollution_table (syntax error at or near ")"
LINE 19:         );
                 ^
; 525)
[2023-10-26T04:01:05.094+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-10-26T04:01:06.010+0000] {taskinstance.py:2776} INFO - 0 downstream tasks scheduled from follow-on schedule check
